# conferences

./: README.md
cppnorth2024/: README.md
cppnorth2024/safe_init/code/: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake
cppnorth2024/safe_init/code/cmake/: Cache.cmake  CompilerWarnings.cmake  GitHash.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cppnorth2024/safe_init/code/lib/example/: CMakeLists.txt  example_api.cpp  example_api_impl.cpp  library_global_initializer.cpp  logger.cpp  worker.cpp
cppnorth2024/safe_init/code/lib/example/include/private/: example_api_impl.hpp  library_instance_lock.hpp  logger.hpp  queue.hpp  scoped_singleton.hpp  worker.hpp
cppnorth2024/safe_init/code/lib/example/include/public/example/: example_api.hpp  exceptions.hpp  version.hpp.in
cppnorth2024/safe_init/code/src/host/: CMakeLists.txt  main.cpp
